Imagem, textos e footer adicionados

--- a/index.html
+++ b/index.html
@@ -19,9 +19,59 @@
         <h1>Bullying</h1>
       </div>
       <div class="quiz-container">
-        <button class="quiz-button">Começar Quiz</button>
+        <button class="quiz-button">COMEÇAR AQUI</button>
       </div>
     </header>
-    <div class="container"></div>
+    <div class="container">
+      <section class="secao-um">
+        <div class="text-container">
+          <div class="text-title">
+            <h1>Uma realidade que precisa ser enfrentada</h1>
+          </div>
+          <div class="text">
+            <p>
+              Bullying é um problema cada vez mais presente em nossa sociedade,
+              afetando pessoas de todas as idades, gêneros e origens. Trata-se
+              de um comportamento agressivo e repetitivo, que pode se manifestar
+              de diferentes formas, desde insultos e ameaças até agressões
+              físicas e exclusão social.
+            </p>
+          </div>
+        </div>
+        <div class="imagem-container">
+          <img
+            class="image-bullying"
+            src="image/imagem_bullying.jpeg"
+            alt="Bullying verbal"
+          />
+        </div>
+      </section>
+      <section class="secao-dois">
+        <p>
+          As consequências do bullying são graves e duradouras, afetando não
+          apenas a saúde emocional e mental das vítimas, mas também seu
+          desempenho escolar e profissional. Infelizmente, muitas pessoas ainda
+          acreditam que o bullying é algo normal ou até mesmo engraçado, sem
+          perceber o impacto devastador que pode ter na vida de quem sofre com
+          ele. Por isso, é fundamental falar sobre o bullying, conscientizar a
+          sociedade e buscar soluções efetivas para prevenir e combater esse
+          problema. É importante entender que o bullying não é uma brincadeira
+          inofensiva, mas sim um comportamento agressivo e prejudicial que
+          precisa ser tratado com seriedade. Se você ou alguém que você conhece
+          está sofrendo bullying, é importante buscar ajuda. Existem diversos
+          recursos e organizações que oferecem apoio e orientação para as
+          vítimas, incluindo linhas telefônicas de ajuda, psicólogos e grupos de
+          apoio. Neste site, você encontrará informações úteis sobre o bullying,
+          suas consequências e como lidar com o problema. Além disso, criamos um
+          quiz para testar seus conhecimentos sobre o tema. Junte-se a nós na
+          luta contra o bullying e ajude a tornar o mundo um lugar mais seguro e
+          respeitoso para todos.
+        </p>
+      </section>
+    </div>
+    <footer style="color: white">@jvitorbarbosa_</footer>
   </body>
 </html>
+
+<!--  subtitlo 65px -->
+<!-- text 15px -->
