--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
@@ -16,7 +20,7 @@
   <body>
     <header>
       <div class="title">
-        <h1>Bullying</h1>
+        <h1>Bullying: um quiz sobre os pontos essenciais</h1>
       </div>
       <div class="quiz-container">
         <button class="quiz-button" onclick="comecarQuiz()">
@@ -25,63 +29,66 @@
       </div>
     </header>
     <div class="container">
-      <section class="secao-um">
-        <div class="text-container">
-          <div class="text-title">
-            <h1>Uma realidade que precisa ser enfrentada</h1>
+      <section class="section-one">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              class="img-fluid"
+              src="image/imagem_bullying.jpeg"
+              alt="Bullying verbal"
+            />
           </div>
-          <div class="text">
-            <p>
-              Bullying é um problema cada vez mais presente em nossa sociedade,
-              afetando pessoas de todas as idades, gêneros e origens. Trata-se
-              de um comportamento agressivo e repetitivo, que pode se manifestar
-              de diferentes formas, desde insultos e ameaças até agressões
-              físicas e exclusão social.
-            </p>
+          <div class="col-md-6">
+            <div class="text-title">
+              <h1>Uma realidade que precisa ser enfrentada</h1>
+            </div>
+            <div class="text">
+              <p>
+                O bullying é um problema cada vez mais presente em nossa
+                sociedade, afetando pessoas de todas as idades, gêneros e
+                origens. Trata-se de um comportamento agressivo e repetitivo,
+                que pode se manifestar de diferentes formas, desde insultos e
+                ameaças até agressões físicas e exclusão social. Infelizmente, o
+                bullying é um tema que ainda é pouco compreendido pela sociedade
+                e muitas vezes é tratado de forma superficial ou ignorado
+                completamente.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="imagem-container">
-          <img
-            class="image-bullying"
-            src="image/imagem_bullying.jpeg"
-            alt="Bullying verbal"
-          />
         </div>
       </section>
+
       <section class="secao-dois">
         <p>
-          As consequências do bullying são graves e duradouras, afetando não
-          apenas a saúde emocional e mental das vítimas, mas também seu
-          desempenho escolar e profissional. Infelizmente, muitas pessoas ainda
-          acreditam que o bullying é algo normal ou até mesmo engraçado, sem
-          perceber o impacto devastador que pode ter na vida de quem sofre com
-          ele. Por isso, é fundamental falar sobre o bullying, conscientizar a
-          sociedade e buscar soluções efetivas para prevenir e combater esse
-          problema. É importante entender que o bullying não é uma brincadeira
-          inofensiva, mas sim um comportamento agressivo e prejudicial que
-          precisa ser tratado com seriedade. Se você ou alguém que você conhece
-          está sofrendo bullying, é importante buscar ajuda. Existem diversos
-          recursos e organizações que oferecem apoio e orientação para as
-          vítimas, incluindo linhas telefônicas de ajuda, psicólogos e grupos de
-          apoio. Neste site, você encontrará informações úteis sobre o bullying,
-          suas consequências e como lidar com o problema. Além disso, criamos um
-          quiz para testar seus conhecimentos sobre o tema. Junte-se a nós na
-          luta contra o bullying e ajude a tornar o mundo um lugar mais seguro e
-          respeitoso para todos.
+          No entanto, as consequências do bullying são graves e duradouras. As
+          vítimas podem sofrer com problemas de saúde mental, como ansiedade,
+          depressão e até mesmo transtorno de estresse pós-traumático. Além
+          disso, o bullying pode afetar negativamente o desempenho escolar e
+          profissional das vítimas, dificultando seu desenvolvimento pessoal e
+          impedindo que alcancem seu potencial máximo. Por isso, é fundamental
+          falar sobre o bullying, conscientizar a sociedade e buscar soluções
+          efetivas para prevenir e combater esse problema. É importante entender
+          que o bullying não é uma brincadeira inofensiva, mas sim um
+          comportamento agressivo e prejudicial que precisa ser tratado com
+          seriedade. Se você ou alguém que você conhece está sofrendo bullying,
+          é importante buscar ajuda. Existem diversos recursos e organizações
+          que oferecem apoio e orientação para as vítimas, incluindo linhas
+          telefônicas de ajuda, psicólogos e grupos de apoio. <br /><br />
+          Neste site, você encontrará informações úteis sobre o bullying, suas
+          consequências e como lidar com o problema. Além disso, criamos um quiz
+          interativo para testar seus conhecimentos sobre o tema. Junte-se a nós
+          na luta contra o bullying e ajude a tornar o mundo um lugar mais
+          seguro e respeitoso para todos."
         </p>
       </section>
       <section class="quiz-section" id="quiz" style="display: none">
         <div class="quiz" id="quiz">
           <h2 id="pergunta"></h2>
           <div id="opcoes"></div>
-          <p id="explicacao"></p>
         </div>
       </section>
     </div>
-    <footer style="color: white">@jvitorbarbosa_</footer>
+    <!-- <footer style="color: white">@jvitorbarbosa_</footer> -->
     <script src="script.js"></script>
   </body>
 </html>
-
-<!--  subtitlo 65px -->
-<!-- text 15px -->
